--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div id="chat-box-container"></div>
     </main>
 <script>
-    const OPENAI_API_KEY = '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'; // Reemplaza con tu API key
+    const OPENAI_API_KEY = 'DWN0A'; // Reemplaza con tu API key
 
     function toggleCharacterList(subject) {
         const lists = document.querySelectorAll('.character-list');
