--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div id="chat-box-container"></div>
     </main>
 <script>
-    const OPENAI_API_KEY = 'DWN0A'; // Reemplaza con tu API key
+    const OPENAI_API_KEY = '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';  // Asegúrate de que la clave esté correcta
 
     function toggleCharacterList(subject) {
         const lists = document.querySelectorAll('.character-list');
@@ -349,3 +349,4 @@
 </script>
 </body>
 </html>
+
